<resources>
    <string name="app_name">detail_game</string>
    <string name="description">Free Fire, game survival shooter terkenal di dunia yang tersedia di ponsel. Game ini berdurasi 10 menit di mana para pemain bertempur melawan 49 pemain lainnya di pulau terpencil, dengan tujuan untuk bertahan hidup. Pemain bebas memilih posisi pertempuran. Pemain memulai permainan dengan menggunakan parasut, mengendarai kendaran untuk menjelajahi map, bersembunyi dalam parit, atau tiarap di padang rumput agar tidak terlihat. Menyerang &amp; bertahan dengan hanya satu tujuan: bertahan hidup &amp; memenangkan pertempuran.
    </string>
    <string name="description1">Free Fire, Battle In Style!

[Permainan Battle Royale Terbaik]
Cari senjatamu, tetap dalam zona pertempuran, loot musuh dan jadilah orang terakhir yang bertahan hidup. Sepanjang pertempuran, carilah airdrop dan hindari serangan udara untuk mendapatkan keunggulan dari pemain lainnya.
    </string>

    <string name="description2">[10 Menit, 50 Pemain, Pertempuran Terhebat Menunggu]
Game Ringan dan Cepat - Dalam 10 menit, Survivors baru akan ditentukan. Apakah kamu sudah siap bertempur dan jadi pemenang?
    </string>

    <string name="description3">[Pertempuran Squad 4 Orang &amp; Bisa Berkomunikasi Langsung Dengan Tim]
Buat squad 4 orang dan komunikasi dengan mereka selama permainan. Atur strategi bersama tim &amp; pimpin teman-temanmu menuju kemenangan dan jadilah tim terakhir yang bertahan.</string>

<string name="description4">[Clash Squad]
Pertempuran 4 vs 4 dengan zona kecil dan durasi permainan lebih singkat, sekarang dibuka setiap hari! Atur keuangan, beli senjata, dan kalahkan musuhmu!
</string>

    <string name="description5">[Realistis &amp; Tampilan Grafik Halus]
Kontrol yang mudah digunakan dan grafik yang halus menjanjikan pengalaman bertahan hidup optimal yang akan kamu temukan di ponsel untuk membantumu mengabadikan namamu di antara para legenda.</string>
</resources>