<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="785dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/freefire" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Free Fire"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2022-02-25"
            android:textColor="@color/abu_abu"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="283dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.4"
            android:textColor="@color/kuning"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="357dp"
            tools:layout_editor_absoluteY="259dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Action"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="323dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Battle Royale"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="323dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="359dp"
            android:layout_height="158dp"
            android:textColor="@color/white"
            android:textSize="13dp"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="417dp"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="360dp"
            android:layout_height="122dp"
            android:textColor="@color/white"
            android:textSize="13dp"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="585dp"
            tools:text="@string/description1"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="363dp"
            android:layout_height="80dp"
            android:textColor="@color/white"
            android:textSize="13dp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="707dp"
            tools:text="@string/description2"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Game"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="379dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="26dp"
            android:layout_height="28dp"
            app:srcCompat="@drawable/Vector"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="255dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:text="Add to Favorite"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="1237dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Developers"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="1126dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="111 Dots Studio"
        android:textColor="@color/biru_muda"
        android:textSize="15dp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="1153dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Publisher"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="1190dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Garena International"
        android:textColor="@color/merah"
        android:textSize="15dp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="1217dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="359dp"
        android:layout_height="78dp"
        android:textColor="@color/white"
        android:textSize="13dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="789dp"
        tools:text="@string/description3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="362dp"
        android:layout_height="77dp"
        android:textColor="@color/white"
        android:textSize="13dp"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="878dp"
        tools:text="@string/description5" />

</androidx.constraintlayout.widget.ConstraintLayout>
